// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Characters Integration Tests - find read two pages should return first page 1`] = `
[
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Luke Skywalker",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Darth Vader",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Han Solo",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Leia Organa",
    "planet": "Alderaan",
  },
  {
    "episodes": [
      "NEWHOPE",
    ],
    "name": "Wilhuff Tarkin",
  },
]
`;

exports[`Characters Integration Tests - find read two pages should return second page 1`] = `
[
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "C-3PO",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "R2-D2",
  },
]
`;

exports[`Characters Integration Tests - find with default limitation should return first 5 entries 1`] = `
[
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Luke Skywalker",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Darth Vader",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Han Solo",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Leia Organa",
    "planet": "Alderaan",
  },
  {
    "episodes": [
      "NEWHOPE",
    ],
    "name": "Wilhuff Tarkin",
  },
]
`;

exports[`Characters Integration Tests - find with offset of 2 should return entries between 2 and 7 1`] = `
[
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Han Solo",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "Leia Organa",
    "planet": "Alderaan",
  },
  {
    "episodes": [
      "NEWHOPE",
    ],
    "name": "Wilhuff Tarkin",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "C-3PO",
  },
  {
    "episodes": [
      "NEWHOPE",
      "EMPIRE",
      "JEDI",
    ],
    "name": "R2-D2",
  },
]
`;
